# sentence-generator

./: .gitignore  README.md  pyproject.toml
src/: fingerprints.py  main.py
src/dictionary/: objects.py  questions.py
src/sentences/: Dissatisfied.py  DoesToiletExist.py  FindMeetingRoom.py  FindRoomInfo.py  FindToilet.py  SayGoodbye.py
src/utils/: generation.py
