[tool.poetry]
name = "training-sentences"
version = "0.1.0"
description = ""
authors = ["Sothyrith Hy <sothyrithhy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pipe = "^2.0"

[tool.poetry.dev-dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
